# finalproject4

finalproj4/solution-part1/: CMakeLists.txt  solution1.cpp
finalproj4/solution-part2/: CMakeLists.txt  solution2.cpp
finalproj4/solution-part3/: CMakeLists.txt
